More fixes for login view on mobile

--- a/style.css
+++ b/style.css
@@ -1382,7 +1382,7 @@ textarea {
 		align-items: center;
 		/* width: 100vw; */
 		/* height: 100vh; */
-		background: #fff;
+		background: transparent;
 		overflow-x: hidden;
 		box-shadow: none;
 		min-width: 0;
@@ -1396,9 +1396,9 @@ textarea {
 	.main-container .form-container {
 		width: 100%;
 		max-width: 100%;
-		padding: 3rem 1.5rem;
+		padding: 1.5rem;
 		background-color: rgba(255, 255, 255, 0.95);
-		box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+		/* box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1); */
 		border-radius: 8px;
 		display: flex;
 		flex-direction: column;
@@ -1413,12 +1413,15 @@ textarea {
 
 	.main-container .form-container form {
 		width: 100%;
-		padding: 1rem;
 		margin: 0;
+		border-radius: 0;
+		box-shadow: none;
+		background-color: transparent;
+		padding: 0;
 	}
 
 	.main-container .form-container form .input-field {
-		margin-bottom: 1.5rem;
+		margin-bottom: 1rem;
 	}
 
 	.main-container .form-container input,
@@ -1430,19 +1433,6 @@ textarea {
 		margin-top: 0.25rem;
 	}
 
-	.main-container .form-container input[type="submit"].btn,
-	.main-container .form-container a.btn {
-		width: 100%;
-		padding: 0.75rem;
-		border: none;
-		border-radius: 4px;
-		background-color: #3f3f3f;
-		color: white;
-		cursor: pointer;
-		text-decoration: none;
-		margin-top: 1rem;
-	}
-
 	.main-container .form-container input[type="submit"].btn {
 		margin-bottom: 1rem;
 	}
@@ -1452,6 +1442,8 @@ textarea {
 		color: #3f3f3f;
 		font-size: 0.9rem;
 		margin-top: 0.5rem;
+		line-height: 1.5rem;
+		text-transform: none;
 	}
 
 	.main-container .form-container sup {
